build_output.txt
cargo :     Checking mdownloader 
v0.2.0 
(D:\WorkStation\IDM\src-tauri)
At line:1 char:54
+ ... env:USERPROFILE\.cargo\bin;
$env:PATH"; cargo check --lib 
2>&1 | Out-F ...
+                                
            
~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : No 
   tSpecified: (    Checking md  
  ...\IDM\src-tauri):String) [   
 ], RemoteException
    + FullyQualifiedErrorId : Na 
   tiveCommandError
 
error[E0432]: unresolved import `
windows_sys::Win32::Storage::File
System::FSCTL_SET_SPARSE`
 --> src\engine\fast_io.rs:7:23
  |
7 |     SetFileValidData, 
FSCTL_SET_SPARSE,
  |                       
^^^^^^^^^^^^^^^^ no 
`FSCTL_SET_SPARSE` in 
`Win32::Storage::FileSystem`

warning: unused import: `Window`
 --> src\engine\manager.rs:8:22
  |
8 | use tauri::{Emitter, Window};
  |                      ^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` (part 
of `#[warn(unused)]`) on by 
default

warning: unused import: `Window`
 --> 
src\commands\download.rs:1:20
  |
1 | use tauri::{State, Window};
  |                    ^^^^^^

warning: variable does not need 
to be mutable
  --> 
src\commands\download.rs:81:9
   |
81 |     let mut manager = 
DownloadManager::new(
   |         ----^^^^^^^
   |         |
   |         help: remove this 
`mut`
   |
   = note: `#[warn(unused_mut)]` 
(part of `#[warn(unused)]`) on 
by default

warning: unused variable: 
`is_split`
  --> src\engine\manager.rs:96:39
   |
96 |                     let 
(segment_idx, is_split, 
total_size) = {
   |                             
          ^^^^^^^^ help: if this 
is intentional, prefix it with 
an underscore: `_is_split`
   |
   = note: 
`#[warn(unused_variables)]` 
(part of `#[warn(unused)]`) on 
by default

For more information about this 
error, try `rustc --explain 
E0432`.
warning: `mdownloader` (lib) 
generated 4 warnings
error: could not compile 
`mdownloader` (lib) due to 1 
previous error; 4 warnings 
emitted
